package com.gateway.fee.domain.model;

public enum CalculationMode {
    FLAT,
    PERCENTAGE,
    HYBRID,
    TIERED_FLAT,
    TIERED_MARGINAL;
}
