package com.gateway.fee.domain.model;

public enum UserType {
    PERSONAL,
    BUSINESS,
    CORPORATE,
    BUSINESS_TERMINAL,
    CORPORATE_TERMINAL;
}
